<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mpsdkDiscountCodeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <ScrollView
        android:id="@+id/mpsdkScrollViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mpsdk_white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/mpsdkToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/mpsdk_background"
                android:theme="@style/ToolbarTheme" >

                <com.mercadopago.customviews.MPTextView
                    android:id="@+id/mpsdkTimerTextView"
                    style="@style/mpsdk_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="13dp"
                    android:background="@drawable/mpsdk_title_toolbar"
                    android:textSize="17dp"
                    android:visibility="gone"
                    app:font_style="roboto_regular" />
            </android.support.v7.widget.Toolbar>

            <FrameLayout
                android:id="@+id/mpsdkDiscountBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mpsdk_background">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/mpsdk_discount_off"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/mpsdk_white"
                    android:orientation="vertical">

                    <com.mercadopago.customviews.MPTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/mpsdk_discount_code"
                        android:textColor="@color/mpsdk_color_new_card_text"
                        android:textSize="14dp" />

                    <com.mercadopago.customviews.MPEditText
                        android:id="@+id/mpsdkDiscountCode"
                        android:layout_width="293dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="2dp"
                        android:inputType="textNoSuggestions|textPersonName"
                        android:maxLength="20"
                        android:privateImeOptions="nm"
                        android:singleLine="true"
                        android:textAllCaps="true"
                        android:textColor="@color/mpsdk_real_black"
                        android:textSize="19dp"
                        custom:errorColor="@color/mpsdk_color_red_error" />
                </LinearLayout>

                <include android:visibility="gone" layout="@layout/mpsdk_view_progress_bar_small"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mpsdk_white">
                <LinearLayout
                    android:id="@+id/mpsdkButtonContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="1">
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.5">
                        <FrameLayout
                            android:id="@+id/mpsdkBackButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/mpsdk_form_input_button"
                            android:focusable="true">
                            <com.mercadopago.customviews.MPTextView
                                android:id="@+id/mpsdkBackButtonText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/mpsdk_input_button_back"
                                android:textColor="@color/mpsdk_active_button" />
                        </FrameLayout>
                        <FrameLayout
                            android:id="@+id/mpsdkBackInactiveButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/mpsdk_very_light_gray"
                            android:visibility="gone">
                            <com.mercadopago.customviews.MPTextView
                                android:id="@+id/mpsdkBackInactiveButtonText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/mpsdk_input_button_back"
                                android:textColor="@color/mpsdk_inactive_button" />
                        </FrameLayout>
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/mpsdkNextButton"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/mpsdk_form_input_button"
                        android:focusable="true">
                        <com.mercadopago.customviews.MPTextView
                            android:id="@+id/mpsdkNextButtonText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/mpsdk_input_button_exchange"
                            android:textColor="@color/mpsdk_active_button" />
                    </FrameLayout>
                </LinearLayout>
                <FrameLayout
                    android:id="@+id/mpsdkErrorContainer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:background="@color/mpsdk_very_light_gray"
                    android:clickable="true"
                    android:visibility="gone">
                    <com.mercadopago.customviews.MPTextView
                        android:id="@+id/mpsdkErrorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/mpsdk_color_red_error"
                        android:textSize="14sp" />
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>