...

    <!-- Discount -->
    <string name="mpsdk_discount">Discount</string>
    <string name="mpsdk_input_button_exchange">Exchange</string>
    <string name="mpsdk_discount_code">Discount code</string>
    <string name="mpsdk_has_a_discount">I have a discount</string>
    <string name="mpsdk_of_discount">of discount</string>
    <string name="mpsdk_percent_of_discount">% of discount</string>
    <string name="mpsdk_do_not_enter_code">You did not enter code</string>
    <string name="mpsdk_invalid_code">Invalid code</string>
    <string name="mpsdk_merchant_without_discount_available">Merchant without discount available</string>
    <string name="mpsdk_ran_out_of_quantity_uses_quantity">Ran out of quantity uses of discount </string>
    <string name="mpsdk_amount_doesnt_match">Amount out of reach</string>
    <string name="mpsdk_campaign_expired">Campaign expired</string>
...
